--- a/Views/Pizze/HomePage.cshtml
+++ b/Views/Pizze/HomePage.cshtml
@@ -42,6 +42,14 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
+            <form asp-controller="Pizze" asp-action="Index" method="get">
+                <p>
+                    Ricerca: <input type="text" name="SearchString" />
+                    <input type="submit" value="Filter" />
+                </p>
+            </form>
+        </div>
+        <div class="col-12">
             <div class="d-flex justify-content-between align-items-center">
             </div>
 
